--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta content="width=device-width, height=device-height, initial-scale=1.0" name="viewport">
 
   <title>Harshit Gaur</title>
